--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
                 document.querySelector(".mathsemestr").innerHTML="Семестр V, VI, VII";
                 document.querySelector("#adminofbd").innerHTML="Администратор баз данных"
                 document.querySelector("#sysadmin").innerHTML="Системный администратор ИС (DevOps инженер)"
+                document.querySelector(".softsemestr").innerHTML="Семестр V, VI, VII";
             }
     </script> 
 </body>
